Реализован эндпоинт для вывода всех меню со всеми связанными подменю и со всеми связанными блюдами
