# api_v1/docs/openapi.json
@@ -17,6 +17,95 @@
       }
    ],
    "paths":{
+      "/api/v1/menus/detail":{
+         "get":{
+            "tags":[
+               "Get Menu"
+            ],
+            "summary":"Get all menus detail from database.",
+            "description":"Menus detail GET method endpoint",
+            "operationId":"GetAllMenusDetail",
+            "responses": {
+               "200":{
+                  "description": "Successful response",
+                  "content":{
+                     "application/json":{
+                        "schema":{
+                           "title":"Sample",
+                           "type":"array",
+                           "items":{
+                              "type": "object",
+                              "properties": {
+                                 "id":{
+                                    "type":"string",
+                                    "format":"uuid"
+                                 },
+                                 "title":{
+                                    "type":"string"
+                                 },
+                                 "description":{
+                                    "type":"string"
+                                 },
+                                 "submenus":{
+                                    "type": "array",
+                                    "items":{
+                                       "type":"object",
+                                       "properties":{
+                                          "id":{
+                                             "type":"string",
+                                             "format":"uuid"
+                                          },
+                                          "title":{
+                                             "type":"string"
+                                          },
+                                          "description":{
+                                             "type":"string"
+                                          },
+                                          "menu_id":{
+                                             "type":"string",
+                                             "format":"uuid"
+                                          },
+                                          "dishes":{
+                                             "type":"array",
+                                             "items":{
+                                                "type":"object",
+                                                "properties":{
+                                                   "id":{
+                                                      "type":"string",
+                                                      "format":"uuid"
+                                                   },
+                                                   "title":{
+                                                      "type":"string"
+                                                   },
+                                                   "description":{
+                                                      "type":"string"
+                                                   },
+                                                   "price":{
+                                                      "type":"string"
+                                                   },
+                                                   "submenu_id":{
+                                                      "type":"string",
+                                                      "format":"uuid"
+                                                   }
+                                                }
+                                             }
+                                          }
+                                       }
+                                    }
+                                 }
+                              }
+                           }
+                        }
+                     }
+                  }
+               },
+               "404":{
+                  "$ref":"#/components/responses/NotFound"
+               }
+            }
+         }
+      },
+
       "/api/v1/menus":{
          "get":{
             "tags":[
@@ -339,7 +428,7 @@
                                              "type":"string"
                                           },
                                           "price":{
-                                             "type":"number"
+                                             "type":"string"
                                           },
                                           "submenu_id":{
                                              "type":"string",
@@ -486,7 +575,7 @@
                                           "type":"string"
                                        },
                                        "price":{
-                                          "type":"number"
+                                          "type":"string"
                                        },
                                        "submenu_id":{
                                           "type":"string",
@@ -642,7 +731,7 @@
                                     "type":"string"
                                  },
                                  "price":{
-                                    "type":"number"
+                                    "type":"string"
                                  },
                                  "submenu_id":{
                                     "type":"string",
@@ -707,7 +796,7 @@
                               "type":"string"
                            },
                            "price": {
-                             "type": "number"
+                             "type": "string"
                            }
                         },
                         "required":[
@@ -738,7 +827,7 @@
                                  "type":"string"
                               },
                               "price":{
-                                 "type":"number"
+                                 "type":"string"
                               },
                               "submenu_id":{
                                  "type":"string",
@@ -817,7 +906,7 @@
                                  "type":"string"
                               },
                               "price":{
-                                 "type":"number"
+                                 "type":"string"
                               },
                               "submenu_id":{
                                  "type":"string",
@@ -894,7 +983,7 @@
                                  "type":"string"
                               },
                               "price":{
-                                 "type":"number"
+                                 "type":"string"
                               },
                               "submenu_id":{
                                  "type":"string",
@@ -1023,7 +1112,7 @@
                                     "type":"string"
                                  },
                                  "price":{
-                                    "type":"number"
+                                    "type":"string"
                                  },
                                  "submenu_id":{
                                     "type":"string",
